# binartia

./: .gitignore  README.md  requirements.txt
core/: Cargo.toml  pyproject.toml
core/src/: entropy.rs  hilbert.rs  lib.rs
examples/: test_binary  test_program.c
scripts/: generate_dataset.py  train_classifier.py
src/: ai_classifier.py  binary_parser.py  cli.py  curve_algorithms.py  dashboard.py  disassembler.py  visual_mapper.py  visualizer.py
tests/: benchmark_visualizer.py  test_curve_algorithms.py  test_visual_mapper.py
